--- a/styles/bottom-bar.css
+++ b/styles/bottom-bar.css
@@ -1,51 +1,235 @@
-body {
-    margin: 0;
-    font: 1em sans-serif;
+#bottom {
+    background-color: #1F1F1F;
 }
 
-#bottom-bar {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 70px;
-    background-color: #222222;
-    color: white;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    margin: 0;
-    padding: 0;
-    margin-top: 170px !important;
+@media screen and (max-width: 650px) {
+    .container {
+        position: relative;
+        width: 100%;
+        height: 900px;
+        text-align: center;
+    }
+    
+    #bottom-bar {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+    }
+    #bottom {
+        width: 100%;
+        height: 180px;
+        position: absolute;
+        bottom: 0px;
+    }
+    #bottom #bottom-left {
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+        width: 47%;
+        height: 35%;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #4583cf18;
+    }
+    #bottom #bottom-left p {
+        color: white;
+        float: left;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: bold;
+        font-size: large;
+    }
+    #home-icon {
+        font-size: 30px;
+        margin-right: 10px;
+        color: #1f6ac5;
+    }
+    #bottom #bottom-right {
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+        width: 47%;
+        height: 35%;
+        border-radius: 10px;
+        background-color: #be434321;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: bold;
+        color: #fff;
+    }
+    #library-icon {
+        font-size: 30px;
+        color: #be4343;
+        margin-right: 10px;
+    }
+    #bottom #bottom-upper {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        width: 96%;
+        height: 35%;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #4583cf18;
+    }
+    #progress {
+        position: absolute;
+        top: 50%;
+        left: 10px;
+        width: 96%;
+        height: 3%;
+        border-radius: 10px;
+        background: rgb(0, 212, 255);
+        background: linear-gradient(90deg, rgba(172, 52, 48, 0.979) 40%, rgb(255, 255, 255) 10%);
+    }
+    #album-art {
+        position: absolute;
+        left: 5px;
+        width: 50px;
+        height: 50px;
+        border-radius: 10px;
+        background-color: #196cda9d;
+        background-image: url('./album.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    #now-playing-title {
+        position: absolute;
+        float: left;
+        left: 70px;
+        color: #fff;
+        font-weight: bold;
+    }
+    .clickable:hover {
+        cursor: pointer;
+    }
+    #music-control {
+        position: absolute;
+        right: 10px;
+        color: #fff;
+    }
+    #music-control * {
+        padding: 7px;
+    }
+    #volume {
+        display: none;
+    }
+    #now-playing-title {
+        top: 0;
+        left: 70px;
+    }
+    #now-playing-artist {
+        top: 25px;
+        left: 70px;
+    }
 }
 
-#bottom-bar #details {
-    float: left;
-    margin-left: 10px;
-    left: 0 !important;
+@media screen and (min-width: 650px) {
+    #bottom-bar {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+    }
+    #bottom #bottom-left {
+        display: none;
+    }
+    #bottom {
+        width: 100%;
+        height: 80px;
+        position: absolute;
+        bottom: 0px;
+        display: flex;
+        justify-content: center;
+    }
+    #bottom #bottom-right {
+        display: none;
+    }
+    #bottom #bottom-upper {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #4583cf18;
+    }
+    #progress {
+        position: absolute;
+        bottom: 10%;
+        /* left: 10px; */
+        width: 50%;
+        height: 5px;
+        border-radius: 10px;
+        background: rgb(0, 212, 255);
+        background: linear-gradient(90deg, rgba(172, 52, 48, 0.979) 40%, rgb(255, 255, 255) 10%);
+    }
+    #album-art {
+        position: absolute;
+        left: 5px;
+        width: 70px;
+        height: 70px;
+        border-radius: 10px;
+        background-color: #196cda9d;
+        background-image: url('./album.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+
+    
+    .clickable:hover {
+        cursor: pointer;
+    }
+    #music-control {
+        position: relative;
+        color: #fff;
+        width: auto;
+        /* border: 1px solid; */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    #skip-previous {
+        margin-right: 50px;
+        /* border: solid; */
+    }
+    #skip-next {
+        margin-left: 50px;
+        /* border: solid; */
+    }
+    #volume {
+        position: absolute;
+        /* border: solid; */
+        right: 10px;
+        color: #fff;
+    }
+    #volume * {
+        padding: 3px;
+    }
+    #now-playing-title {
+        margin-bottom: 20px;
+        top: 5px;
+        left: 90px;
+    }
+    #now-playing-artist {
+        top: 30px;
+        left: 90px;
+    }
+}
+
+#now-playing-title {
     position: absolute;
+    color: #fff;
+    font-weight: bold;
 }
-
-#bottom-bar #details h3 {
-    margin: 10px 0px 10px 0px;
-}
-#bottom-bar #details p {
-    margin-top: 0;
-}
-
-#bottom-bar #controls {
-    margin: auto;
-    text-align: center;
-    width: 300px;
-}
-
-#bottom-bar #controls i {
-    font-size: 30px;
-}
-
-#bottom-bar #controls #previous {
-    float: left;
-}
-
-#bottom-bar #controls #next {
-    float: right;
+#now-playing-artist {
+    position: absolute;
+    color: #fff;
+    font-size: small;
 }
